add i18n and more

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,7 +1,7 @@
 {
   "title": "Nieuwe Instituut CollectionBot",
-  "title1": "Collectio",
-  "title2": "nBot",
+  "indextitle1": "Discover the possibilities of Generat",
+  "indextitle2": "ive AI with CollectionBot",
   "description": "A prototype demonstrating the use of a generative AI application to disclose collection data.",
   "intro": "This is a prototype application, testing the usage of the generative AI to disclose collection information.",
   "regular_1": "This website was made using the ",
