--- a/public/locales/nl/common.json
+++ b/public/locales/nl/common.json
@@ -1,7 +1,7 @@
 {
   "title": "Nieuwe Instituut CollectieBot",
-  "title1": "Collecti",
-  "title2": "eBot",
+  "indextitle1": "Ontdek de mogelijkheden van generatie",
+  "indextitle2": "ve AI met CollectionBot",
   "description": "Krijg antwoord op je vragen over Nederlands architectuurerfgoed, met behulp van generatieve kunstmatige intelligentie.",
   "intro": "Krijg antwoord op je vragen over Nederlands architectuurerfgoed, met behulp van generatieve kunstmatige intelligentie.",
   "regular_1": "Deze website is gemaakt met behulp van de ",
@@ -44,17 +44,17 @@
   "sonneveldTitle": "Huis Sonneveld",
   "sonneveldTwitterTitle": "Huis Sonneveld",
   "sonneveldOgTitle": "Huis Sonneveld",
-  "sonneveldOgDescription": "Verken de geschiedenis en kenmerken van Huis Sonneveld met CollectionBot.",
-  "sonneveldTwitterDescription": "Verken de geschiedenis en kenmerken van Huis Sonneveld met CollectionBot.",
+  "sonneveldOgDescription": "Ontdek de geschiedenis en kenmerken van Huis Sonneveld met CollectieBot.",
+  "sonneveldTwitterDescription": "Verken de geschiedenis en kenmerken van Huis Sonneveld met CollectieBot.",
   "sonneveldIntro": "Verken de geschiedenis en kenmerken van Huis Sonneveld met CollectionBot.",
   "sonneveldQuestion": "Stel een vraag over Huis Sonneveld",
   "sonneveldCaption": "Dit is Huis Sonneveld. Foto: Johannes Schwartz.",
-  "sonneveldMoreInfo": "Voel je vrij om meer te vragen over Huis Sonneveld.",
+  "sonneveldMoreInfo": "Stel gerust een vraag over Huis Sonneveld.",
   "sonneveldTip1Title": "Tip 1",
   "sonneveldTip1Text": "elk antwoord kost een paar seconden om te genereren, dus wees geduldig na het klikken op de knop 'Antwoord krijgen'.",
   "sonneveldTip2Title": "Tip 2",
-  "sonneveldTip2Text": "als je niet weet waar je moet beginnen, vraag dan gewoon 'Wat is er zo bijzonder aan dit?'",
-  "sonneveldQuestion1": "Kunt u meer vertellen over de architect van Huis Sonneveld?",
+  "sonneveldTip2Text": "als je niet weet waar je moet beginnen, vraag dan gewoon 'Wat is hier zo bijzonder aan?'",
+  "sonneveldQuestion1": "Kun je meer vertellen over de architect van Huis Sonneveld?",
   "sonneveldQuestion2": "Wat is de architectonische stijl van Huis Sonneveld?",
   "sonneveldQuestion3": "Welke materialen werden gebruikt om Huis Sonneveld te bouwen?",
   "sonneveldQuestion4": "Hoeveel verdiepingen heeft Huis Sonneveld?",
