--- a/public/locales/nl/common.json
+++ b/public/locales/nl/common.json
@@ -13,24 +13,24 @@
   "sonneveld_alt": "Huis Sonneveld",
   "disclaimer": "Dit prototype is gemaakt door Jaap Stronks.",
   "vanDoesburgTitle": "Van Doesburg's interieurmodel voor l'Aubette",
-  "vanDoesburgTwitterTitle": "Van Doesburg's interieurmodel voor l'Aubette",
-  "vanDoesburgOgTitle": "Van Doesburg's interieurmodel voor l'Aubette",
-  "vanDoesburgOgDescription": "Stel een vraag over het interieurmodel voor l'Aubette van Van Doesburg en krijg antwoord van een AI-model",
+  "vanDoesburgTwitterTitle": "Het interieurmodel voor l'Aubette door Van Doesburg",
+  "vanDoesburgOgTitle": "Het interieurmodel voor l'Aubette door Van Doesburg",
+  "vanDoesburgOgDescription": "Stel een vraag over het interieurmodel voor l'Aubette door Van Doesburg en krijg antwoord van een AI-model",
   "vanDoesburgTwitterDescription": "Stel een vraag over het interieurmodel voor l'Aubette van Van Doesburg en krijg antwoord van een AI-model",
   "vanDoesburgQuestion": "Stel een vraag over het interieurmodel van Van Doesburg voor l'Aubette",
   "vanDoesburgCaption": "Dit is een model van architect en kunstenaar Theo van Doesburg. Foto: Johannes Schwartz.",
-  "vanDoesburgMoreInfo": "Vraag gerust meer informatie over het interieurmodel voor l'Aubette. Bijvoorbeeld: waarvan is dit een model? Hoe is het gemaakt? Wat is er zo speciaal aan? Welke beweging is dit een icoon van? Waar kan het in persoon worden bekeken? Stel je vragen!",
+  "vanDoesburgMoreInfo": "Stel gerust een vraag over het interieurmodel voor l'Aubette. Bijvoorbeeld: waarvan is dit een model? Hoe is het gemaakt? Wat is er zo bijzonder aan? Welke beweging is dit een icoon van? Waar kan het worden bekeken? Stel je vragen!",
   "doesburgquestion1": "Wat is er interessant aan dit model?",
   "doesburgquestion2": "Hoe verhoudt dit zich tot 'De Stijl'?",
   "doesburgquestion3": "Wat is de geschiedenis achter dit ontwerp?",
   "doesburgquestion4": "Hoe is dit model gemaakt?",
   "doesburgquestion5": "Met wie heeft Van Doesburg samengewerkt?",
   "vanDoesburgTip1Title": "Tip 1",
-  "vanDoesburgTip1Text": "Elk antwoord duurt een paar seconden om te genereren, dus wees geduldig nadat u op de knop 'Antwoord krijgen' hebt geklikt.",
+  "vanDoesburgTip1Text": "Elk antwoord duurt een paar seconden om te genereren, dus wacht eventjes nadat je op de knop 'Antwoord krijgen' hebt geklikt.",
   "vanDoesburgTip2Title": "Tip 2",
   "vanDoesburgTip2Text": "Als je niet weet waar te beginnen, vraag dan gewoon 'Wat is er zo speciaal aan?'",
   "vanDoesburgRequestFailed": "Er is iets misgegaan bij het genereren van het antwoord. Probeer het opnieuw.",
-  "vanDoesburgIntro": "Dit is een prototype applicatie die het gebruik van generatieve AI test om collectie-informatie te onthullen.",
+  "vanDoesburgIntro": "Dit is een prototype-applicatie die bedoeld is om te ontdekken hoe generatieve AI kan worden ingezet voor de ontsluiting van cultureel erfgoed",
   "vanDoesburgQuestion1": "Wat is interessant aan dit model?",
   "vanDoesburgQuestion2": "Hoe verhoudt dit zich tot 'De Stijl'?",
   "vanDoesburgQuestion3": "Wat is de geschiedenis achter dit ontwerp?",
@@ -44,9 +44,9 @@
   "sonneveldTitle": "Huis Sonneveld",
   "sonneveldTwitterTitle": "Huis Sonneveld",
   "sonneveldOgTitle": "Huis Sonneveld",
-  "sonneveldOgDescription": "Ontdek de geschiedenis en kenmerken van Huis Sonneveld met CollectieBot.",
-  "sonneveldTwitterDescription": "Verken de geschiedenis en kenmerken van Huis Sonneveld met CollectieBot.",
-  "sonneveldIntro": "Verken de geschiedenis en kenmerken van Huis Sonneveld met CollectionBot.",
+  "sonneveldOgDescription": "Ontdek Huis Sonneveld met CollectieBot.",
+  "sonneveldTwitterDescription": "Ontdek Huis Sonneveld met CollectieBot.",
+  "sonneveldIntro": "Ontdek Huis Sonneveld met CollectionBot.",
   "sonneveldQuestion": "Stel een vraag over Huis Sonneveld",
   "sonneveldCaption": "Dit is Huis Sonneveld. Foto: Johannes Schwartz.",
   "sonneveldMoreInfo": "Stel gerust een vraag over Huis Sonneveld.",
