--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -12,7 +12,8 @@
   "sonneveld_title": "Sonneveld House",
   "sonneveld_alt": "Sonneveld House",
   "disclaimer": "This prototype was made by Jaap Stronks.",
-  "sonneveldTitle": "House Sonneveld",
+  "sonneveldTitle1": "Sonneveld H",
+  "sonneveldTitle2": "ouse",
   "sonneveldTwitterTitle": "House Sonneveld",
   "sonneveldOgTitle": "House Sonneveld",
   "sonneveldOgDescription": "Explore the history and features of House Sonneveld with CollectionBot.",
