--- a/public/locales/nl/common.json
+++ b/public/locales/nl/common.json
@@ -41,7 +41,8 @@
   "eli5label": "Leg uit alsof ik een kind ben",
   "buttonText": "Krijg antwoord",
   "disclaimertext": "Dit prototype is ontwikkeld door Jaap Stronks.",
-  "sonneveldTitle": "Huis Sonneveld",
+  "sonneveldTitle1": "Huis So",
+  "sonneveldTitle2": "nneveld",
   "sonneveldTwitterTitle": "Huis Sonneveld",
   "sonneveldOgTitle": "Huis Sonneveld",
   "sonneveldOgDescription": "Ontdek Huis Sonneveld met CollectieBot.",
